# taskManager2

./: Cargo.toml  PathShortCut.json  README.md
.github/workflows/: test.yaml
src/: main.rs
src/ClipBoard_Python/: main.py
src/UserInterface/: app.rs  mod.rs  ui.rs
