[package]
name = "taskManager2"
version = "0.1.0"
authors = ["ryota-kita <ryota-kita@kke.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
argh = "0.1.0"
rand = "0.8"
once_cell = "1.8.0"
