[package]
name = "FEXP"
version = "0.1.0"
authors = ["ryota-kita <ryota-kita@kke.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
argh = "0.1.0"
rand = "0.8"
once_cell = "1.8.0"
winrt = "0.7.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
